--- a/it/features.po
+++ b/it/features.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>, 2018\n"
+"Last-Translator: Enrico B. <enricobe@hotmail.com>, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/delta-chat/teams/76181/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,6 +71,18 @@ msgid ""
 "- Anonymous: **Metadata** like _Who_ communicates with _Whom_, _When_ and _Where_ is **not collected**\n"
 "- Dynamic: Delta Chat offers **group chats**"
 msgstr ""
+"- Delta Chat è l'app di messaggistica con **la più grande base utenti al mondo**: qualsiasi client email e sistema operativo è compatibile \n"
+"- Architettura distribuita: Delta Chat non richiede **nessun server centrale**\n"
+"- Indipendente: **non dipende** da nessun servizio o server di terze parti - Delta Chat usa solo il tuo server email.\n"
+"- Il tuo account è indipendente da un numero di telefono\n"
+"- Veloce: **messaggi Push** ricevuti in pochi istanti - Interfaccia facile e veloce\n"
+"- Potente: messaggi **illimitati**, come anche immagini, video, messaggi vocali e molto altro - Supporta il multi-client\n"
+"- Libera: Delta Chat sarà sempre **gratuita** - Open Source - **Senza pubblicità** - Utilizzabile senza abbonamento\n"
+"- Sicura: **criptazione** con gli algoritmi più diffusi - Aperto alla revisione del codice sorgente\n"
+"- Protetta: Delta Chat ti protegge dallo **spam**\n"
+"- Legale: la tua **rubrica** rimane nel tuo smartphone - **Non viene caricata** da nessuna parte\n"
+"- Anonima: i **metadata** come _Chi_ comunica con _Chi_, _Quando_ e _Dove_ **non vengono raccolti**\n"
+"- Dinamica: Delta Chat permette le **chat di gruppo**"
 
 #: ../en/features.md:30
 msgid ""
