--- a/ru/features.po
+++ b/ru/features.po
@@ -71,7 +71,7 @@ msgid ""
 "- Dynamic: Delta Chat offers **group chats**"
 msgstr ""
 "- Delta Chat - это мессенджер с самой большой базой данных **в мире**: Совместим с любым почтовым клиентом на любой операционной системе\n"
-"- Распределенная архитектура: Отсутствует **центральный сервер** Delta Chat ** **\n"
+"- Распределенная архитектура: Отсутствует **центральный сервер** Delta Chat\n"
 "- Независим: Вы **независимы** от любой внешней службы или сервера - Delta Chat использует только ваш почтовый сервер.\n"
 "- Ваша учетная запись не зависит от номера мобильного телефона\n"
 "- Быстрый: **Push-сообщения** за секунды - Быстрый интерфейс\n"
