--- a/ru/help.po
+++ b/ru/help.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: guland2000 <lycoris@ya.ru>, 2018\n"
+"Last-Translator: Alex <kekcuha@gmail.com>, 2018\n"
 "Language-Team: Russian (https://www.transifex.com/delta-chat/teams/76181/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -319,10 +319,12 @@ msgid ""
 "- For an end-to-end-encryption, Delta Chat show two fingerprints there. If they are the same on the device of your chat partner, the connection is safe.\n"
 "- For transport encryption, this state is just shown there"
 msgstr ""
+"— При использовании сквозного шифрования будут показаны отпечатки двух ключей. Если они совпадают на обоих устройствах, то соединение безопасно.\n"
+"— При использовании протокола (TLS), статус будет отображаться"
 
 #: ../en/help.md:118
 msgid "## Which standards are used for end-to-end-encryption?"
-msgstr ""
+msgstr "## Какие стандарты используются для сквозного шифрования?"
 
 #: ../en/help.md:120
 msgid ""
@@ -341,6 +343,10 @@ msgid ""
 "e-mail client. Look for sth. like **Start Autocrypt Setup Transfer** in the "
 "settings of the other client and follow the instructions shown there."
 msgstr ""
+"— Да. Самый простой способ использовать существующий ключ — отправить его из"
+" приложения для работы с электронной почтой. Найдите в настройка слова типа "
+"\"Autocrypt Setup Message\" в параметрах своего приложения и следуйте "
+"дальнейшим указаниям."
 
 #: ../en/help.md:126
 msgid ""
@@ -348,6 +354,10 @@ msgid ""
 "Manage private keys\". Caution: Make sure, the key is not protected by a "
 "password or remove it before."
 msgstr ""
+"— Также возможно выполнить импорт ключей вручную. Для этого воспользуйтесь "
+"пунктом меню «Расширенные настройки →  Управление закрытыми ключами». "
+"Внимание: убедитесь в том что ключи незащищены паролем, отключите и/или "
+"удалите пароль перед их использованием."
 
 #: ../en/help.md:128
 msgid ""
