--- a/it/references.po
+++ b/it/references.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>, 2018\n"
+"Last-Translator: Enrico B. <enricobe@hotmail.com>, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/delta-chat/teams/76181/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -72,6 +72,8 @@ msgid ""
 "_\"Der pfiffige Messenger Delta Chat bietet eine interessante Alternative zu"
 " Datenkraken wie Whatsapp.\"_"
 msgstr ""
+"_\"Delta Chat Messenger è un'alternativa intelligente ed interessante alle "
+"applicazioni tentacolari e ruba-dati come Whatsapp.\"_"
 
 #: ../en/references.md:23
 msgid ""
@@ -110,6 +112,8 @@ msgid ""
 "vorstellen, dass ich damit nach und nach alle anderen Chat Messenger ablösen"
 " kann [...]\"_"
 msgstr ""
+"_\"A mio avviso l'applicazione è ottima e potrei anche pensare di sostituire"
+" gradualmente tutte le altre app di messaggistica[...]\"_"
 
 #: ../en/references.md:37
 msgid ""
