--- a/ru/contribute.po
+++ b/ru/contribute.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Alex <kekcuha@gmail.com>, 2018\n"
 "Language-Team: Russian (https://www.transifex.com/delta-chat/teams/76181/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -53,6 +53,9 @@ msgid ""
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
 "- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
+" — Подпишитесь на [список рассылки Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) для участия в обсуждениях;\n"
+"— Примите участие в совместной разработке в [репозиториях Delta Chat на github](https://github.com/deltachat/);\n"
+"— Присоединяйтесь к обсуждениями на IRC-канале **#deltachat** на серверах freenode. Самый простой способ подключиться — использовать [Web IRC]({% include webirc-url %})."
 
 #: ../en/contribute.md:20
 msgid "# Donate"
@@ -115,7 +118,7 @@ msgid ""
 "We are looking for open source developers who are familiar with C, Java, Android, iOS, Windows, Linux or Mac.\n"
 "Edit your own [Delta Chat](https://github.com/deltachat/) fork and send a pull request."
 msgstr ""
-"Нам ищем программистов для открытой разработки, того кто хорошо разбирается в C, Java, Android, iOS, Windows, Linux or Mac.\n"
+"Мы ищем программистов для открытой разработки, того кто хорошо разбирается в C, Java, Android, iOS, Windows, Linux or Mac.\n"
 "Создайте собственный [Delta Chat](https://github.com/deltachat/) форк и сделайте запрос на слияние."
 
 #: ../en/contribute.md:45
