--- a/ru/index.po
+++ b/ru/index.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: guland2000 <lycoris@ya.ru>, 2018\n"
 "Language-Team: Russian (https://www.transifex.com/delta-chat/teams/76181/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,8 @@ msgid ""
 "**Free**, **independent**, email compatible."
 msgstr ""
 "# Delta Chat\n"
-"Мессенджер с **самым большим охватом** в мире. **Бесплатный**, **безопасный**, совместимый с электронной почтой."
+"Мессенджер с **самым большим охватом** в мире. \n"
+"**Бесплатный**, **независимый**, совместим с любым поставщиком эл.почты."
 
 #: ../en/index.md:13
 msgctxt "../en/index.md:13"
@@ -52,7 +53,8 @@ msgid ""
 "The app only uses your email server."
 msgstr ""
 "# Независимый\n"
-"**Не существует сервера Delta Chat.** Приложение использует только ваш почтовый сервер."
+"**Не существует сервера Delta Chat.** \n"
+"Приложение использует только ваш почтовый сервер."
 
 #: ../en/index.md:19
 msgctxt "../en/index.md:19"
@@ -66,7 +68,8 @@ msgid ""
 "Rapid interface."
 msgstr ""
 "# Быстрый\n"
-"**Push-сообщения** за секунды. Быстрый интерфейс."
+"**Push-сообщения** за секунды. \n"
+"Быстрый интерфейс."
 
 #: ../en/index.md:25
 msgctxt "../en/index.md:25"
@@ -79,7 +82,7 @@ msgid ""
 "**Unlimited** chats, images, videos, audio messages and more. Multi-client capable."
 msgstr ""
 "# Мощный\n"
-"**Неограниченные** чаты, изображения, видео, аудио-сообщения и многое другое. Мульти-клиентная способность."
+"**Неограниченные** чаты, изображения, видео, аудио-сообщения и многое другое. Мультиклиентный."
 
 #: ../en/index.md:30
 msgctxt "../en/index.md:30"
@@ -93,7 +96,8 @@ msgid ""
 "Open Source. No ads. No subscription. No vendor lock-in."
 msgstr ""
 "# Бесплатный\n"
-"**Delta Chat** бесплатен навсегда. Открытый исходный код. Нет рекламы. Нет подписки. Нет привязки к производителю."
+"**Delta Chat** бесплатен навсегда. \n"
+"Открытый исходный код. Нет рекламы. Нет подписки. Не привязан к конкретному поставщику услуг."
 
 #: ../en/index.md:36
 msgctxt "../en/index.md:36"
@@ -105,8 +109,8 @@ msgid ""
 "# Encrypted\n"
 "Encrypted with all common algorithms. Messages stay on your servers."
 msgstr ""
-"# Безопасный\n"
-"**Зашифровано** всеми распространенными алгоритмами. Сообщения остаются на вашем сервере."
+"# Зашифрован\n"
+"**Шифрование** всеми распространенными алгоритмами. Сообщения остаются на ваших серверах."
 
 #: ../en/index.md:41
 msgctxt "../en/index.md:41"
@@ -119,7 +123,7 @@ msgid ""
 "**Delta Chat** is safe for business use, compatible and standards-based."
 msgstr ""
 "# Надёжный\n"
-"**Delta Chat** безопасен для использования в бизнесе, совместимый и основанный на стандартах."
+"**Delta Chat** безопасен для использования в бизнесе, совместим и основан на базовых стандартах."
 
 #: ../en/index.md:46
 msgid "{% include slider-end.html %}"
