--- a/fr/index.po
+++ b/fr/index.po
@@ -7,7 +7,7 @@ msgstr ""
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
-"Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
+"Language-Team: French (https://beta.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
