--- a/ca/contribute.po
+++ b/ca/contribute.po
@@ -53,6 +53,9 @@ msgid ""
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
 "- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
+"- Dona't d'alta a la  [llista de correu del Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) pels debats de la comunitat\n"
+"- Col·labora als [repositoris Github de Delta Chat](https://github.com/deltachat/)\n"
+"- Entra al canal IRC **#deltachat** de freenode - de manera senzilla via [Web IRC]({% include webirc-url %})"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
