--- a/ca/features.po
+++ b/ca/features.po
@@ -7,7 +7,7 @@ msgstr ""
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Calbasi <joan@calbasi.net>, 2018\n"
-"Language-Team: Catalan (https://www.transifex.com/delta-chat/teams/76181/ca/)\n"
+"Language-Team: Catalan (https://beta.transifex.com/delta-chat/teams/76181/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -71,6 +71,18 @@ msgid ""
 "- Anonymous: **Metadata** like _Who_ communicates with _Whom_, _When_ and _Where_ is **not collected**\n"
 "- Dynamic: Delta Chat offers **group chats**"
 msgstr ""
+"- Delta Chat és l'app de missatgeria amb la **base d'usuaris més gran de Món**: qualsevol client de correu electrònic de qualsevol sistema operatiu n'és compatible.\n"
+"- Arquitectura distribuïda: No hi ha un **servidor central** Delta Chat\n"
+"- Independent: **no depens** de cap servei o servidor extern - Delta Chat només fa servir el teu servidor de correu electrònic.\n"
+"- El teu compte és independent de un número de telèfon mòbil\n"
+"- Ràpid: **Envia missatges (push)** en segons - Interfície ràpida\n"
+"- Potent: xats, imatges, videos i audios **Il·limitats** - Capacitat multi-client\n"
+"- De franc: Delta Chat sempre serà: **Gratuït** -  Codi obert - **Lliure de publicitat** - Usable sense subscripció\n"
+"- Segur: **Encriptat** amb els algoritmes més habituals - Obert a la revisió del codi font\n"
+"- Protegit: Delta Chat et protegeix de l'**spam**\n"
+"- Legal: Els teus **contactes** reten al teu telèfon - No son **pujades** enlloc\n"
+"- Anònim: Les **Metadates** com _Who_ (qui) comunica amb _Whom_ (qui), _When_ (quan) _Where_ (on) **no es registren**\n"
+"- Dinàmic: Delta Chat ofereix **grups de xats**"
 
 #: ../en/features.md:30
 msgid ""
