--- a/ca/features.po
+++ b/ca/features.po
@@ -7,7 +7,7 @@ msgstr ""
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Calbasi <joan@calbasi.net>, 2018\n"
-"Language-Team: Catalan (https://beta.transifex.com/delta-chat/teams/76181/ca/)\n"
+"Language-Team: Catalan (https://www.transifex.com/delta-chat/teams/76181/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
