--- a/pt/contribute.po
+++ b/pt/contribute.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Luis Fernando Stürmer da Rosa <luisfsr@opmbx.org>, 2018\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -163,3 +163,6 @@ msgid ""
 "- [Delta Chat iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
 "- [Core Library + Python](https://github.com/deltachat/deltachat-core/issues)"
 msgstr ""
+"- [Delta Chat Android](https://github.com/deltachat/deltachat-android/issues)\n"
+"- [Delta Chat iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
+"- [Core Library + Python](https://github.com/deltachat/deltachat-core/issues)"
