--- a/pt/features.po
+++ b/pt/features.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 14:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Luis Fernando Stürmer da Rosa <luisfsr@opmbx.org>, 2018\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgid ""
 "better, safer and user-optimised."
 msgstr ""
 "O Delta Chat é um app moderno. É como um e-mail numa nova roupagem. <br>Só "
-"que melhor, mais seguro e melhorado."
+"que melhor, mais seguro e otimizado."
 
 #: ../en/features.md:10
 msgid ""
