update catalan translation

--- a/ca/download.po
+++ b/ca/download.po
@@ -111,6 +111,8 @@ msgid ""
 "For Android, you can verify the signing certificate on the APK matches one "
 "of the following SHA256 fingerprints:  "
 msgstr ""
+"Per Android, pots verificar que el certificat de signatura a l'APK "
+"coincideix amb alguna d'aquestes petjades SHA256:"
 
 #: ../en/download.md:41
 msgid ""
@@ -119,9 +121,15 @@ msgid ""
 "* Other APK downloads:  \n"
 "  `{% include fingerprint-local %}`"
 msgstr ""
+"* Per descàrregues d'F-Droid:  \n"
+"  `{% include fingerprint-f-droid %}`\n"
+"* Altres descàrregues APK:  \n"
+"  `{% include fingerprint-local %}`"
 
 #: ../en/download.md:46
 msgid ""
 "To print the SHA256 fingerprints of the APK signing certificate you can use eg.  \n"
 "`keytool -list -printcert -jarfile <APK-file>`"
 msgstr ""
+"Si vols imprimir les petjades SHA256 del certificat de signatura APK  pots usar per ex.  \n"
+"`keytool -list -printcert -jarfile <APK-file>`"
