--- a/de/features.po
+++ b/de/features.po
@@ -4,9 +4,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-23 09:42+0200\n"
+"POT-Creation-Date: 2018-08-24 13:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: happyreacer <c.dummert@googlemail.com>, 2018\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,7 +80,7 @@ msgstr ""
 "- Sicher: **Verschlüsselung** mit allen gängigen Verfahren - Quelloffen und überprüfbar\n"
 "- Geschützt: Delta Chat schützt Sie vor lästigen **Spam**-Nachrichten\n"
 "- Legal: Alle **Telefonbuch-Daten** bleiben auf ihrem Smartphone - Sie werden **nicht gesammelt**\n"
-"- Anonymous: **Metadata** like _Who_ communicates with _Whom_, _When_ and _Where_ is **not collected**\n"
+"- Anonymous: **Metadaten** wie z.B. wer mit wem kommuniziert, wann und wo wird **nicht gesammelt**\n"
 "- Dynamisch: Delta Chat bietet **Gruppenchats**"
 
 #: ../en/features.md:30
