--- a/pl/contribute.po
+++ b/pl/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-23 09:42+0200\n"
+"POT-Creation-Date: 2018-08-24 13:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Telegram Polska <sebek@life.pl>, 2018\n"
 "Language-Team: Polish (https://www.transifex.com/delta-chat/teams/76181/pl/)\n"
@@ -51,7 +51,7 @@ msgstr ""
 msgid ""
 "- <b>New:</b> Have a look at the [Delta Chat support forum](https://support.delta.chat)\n"
 "- Join the [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) for community discussions\n"
-"- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
+"- Collaborate through the [Delta Chat repositories](https://github.com/deltachat/)\n"
 "- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
 
