--- a/de/contribute.po
+++ b/de/contribute.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-24 13:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: happyreacer <c.dummert@googlemail.com>, 2018\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,6 +54,10 @@ msgid ""
 "- Collaborate through the [Delta Chat repositories](https://github.com/deltachat/)\n"
 "- Join IRC channel **#deltachat** on freenode - easily via [Web IRC]({% include webirc-url %})"
 msgstr ""
+"- Neu: Schauen Sie in unser Chat [Delta Chat support forum](https://support.delta.chat)\n"
+"- Melden Sie sich bei der [Delta Chat mailing list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) für Diskussionen in der Community an\n"
+"- Arbeiten Sie mit uns in den [Github Delta Chat repositories](https://github.com/deltachat/) zusammen\n"
+"- Besuchen Sie den IRC channel **#deltachat** über freenode - einfach mit [Web IRC]({% include webirc-url %})"
 
 #: ../en/contribute.md:21
 msgid "# Donate"
